--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,7 @@ import '../styles/Components/header.css';
                 <li><a href="/committee" class="nav-link">Committees</a></li>
                 <li><a href="/contact" class="nav-link">Contact</a></li>
                 <li>
-                    <a href="https://merch.tskvspartacus.nl/" target="_blank" rel="noopener noreferrer" class="nav-link">Shop</a>
+                    <a href="https://tskvspartacus.nl/shop/" target="_blank" rel="noopener noreferrer" class="nav-link">Shop</a>
                 </li>
                 <!-- Desktop Join Button (hidden on mobile) -->
                 <li class="desktop-join-link">
