--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -38,7 +38,7 @@ import '../styles/Components/Footer.css';
                 <ul class="footer-links">
                     <li><a href="/membership-discounts">Member Discounts</a></li>
                     <li><a href="https://knkf-sectiepowerliften.nl/" target="_blank">KNKF Registration</a></li>
-                    <li><a href="https://merch.tskvspartacus.nl/" target="_blank">Official Webshop</a></li>
+                    <li><a href="https://tskvspartacus.nl/shop/" target="_blank">Official Webshop</a></li>
                     <li><a href="/important-documents">Important Documents</a></li>
                     <li><a href="/strenghtsports/powerlifting">Powerlifting Info</a></li>
                 </ul>
